[gd_scene load_steps=3 format=3 uid="uid://c4tpd08i2ypaq"]

[ext_resource type="Script" uid="uid://bqa01mcntirud" path="res://scenes/profile/profile_screen.gd" id="1_1k4fv"]
[ext_resource type="Theme" path="res://ui/theme/app_theme.tres" id="2_or3b4"]

[node name="ProfileScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1k4fv")

[node name="MainContent" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainVBox" type="VBoxContainer" parent="MainContent"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MainContent/MainVBox"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_or3b4")
theme_type_variation = &"FlatButton"
text = "Назад	"

[node name="TitleLabel" type="Label" parent="MainContent/MainVBox"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.41960785, 0.5686275, 0.81960785, 1)
theme_override_font_sizes/font_size = 32
text = "Профиль"
horizontal_alignment = 1

[node name="Separator" type="ColorRect" parent="MainContent/MainVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0.9411765, 0.9411765, 0.9411765, 0)

[node name="TopSection" type="HBoxContainer" parent="MainContent/MainVBox"]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="MainContent/MainVBox/TopSection"]
layout_mode = 2

[node name="GeneralStatsCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/LeftColumn"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.41960785, 0.5686275, 0.8235294, 1)
text = "Общая статистика"
horizontal_alignment = 1

[node name="LevelsCompletedLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.8235294, 0.9019608, 1)
text = "Завершено уровней: 0"

[node name="UniqueLevelsCompletedLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
text = "Уникальных песен сыграно: 0"

[node name="OverallAccuracyLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
text = "Общая точность: 0.00%"

[node name="PlayTimeLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
text = "Времени в игре: 00:00"

[node name="TotalScoreLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
text = "Всего очков: 0"

[node name="DailyQuestsCompletedLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
text = "Выполнено ежедневных заданий: 0"

[node name="TotalNotesHitLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.38039216, 0.78039217, 0.7411765, 1)
text = "Точных попаданий: 0"

[node name="TotalNotesMissedLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.4509804, 0.4509804, 1)
text = "Промахов: 0"

[node name="MaxHitStreakLabel" type="Label" parent="MainContent/MainVBox/TopSection/LeftColumn/GeneralStatsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9490196, 0.7019608, 0.3529412, 1)
text = "Рекордная серия попаданий подряд: 0"

[node name="CenterColumn" type="VBoxContainer" parent="MainContent/MainVBox/TopSection"]
layout_mode = 2

[node name="LevelXPCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/CenterColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/CenterColumn/LevelXPCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/LevelXPCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5568628, 0.47843137, 0.9372549, 1)
text = "Уровень"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/LevelXPCard/ContentVBox"]
layout_mode = 2
text = "Уровень: 1"

[node name="XPLabel" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/LevelXPCard/ContentVBox"]
layout_mode = 2
text = "XP: 0 / 100"

[node name="XPProgressLabel" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/LevelXPCard/ContentVBox"]
layout_mode = 2
text = "Прогресс: 0.0%"

[node name="EconomyCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/CenterColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/CenterColumn/EconomyCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/EconomyCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.34901962, 0.81960785, 0.74509805, 1)
text = "Экономика"
horizontal_alignment = 1

[node name="TotalEarnedCurrencyLabel" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/EconomyCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.38039216, 0.78039217, 0.7411765, 1)
text = "Заработано всего: 0"

[node name="SpentCurrencyLabel" type="Label" parent="MainContent/MainVBox/TopSection/CenterColumn/EconomyCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.4509804, 0.4509804, 1)
text = "Потрачено: 0"

[node name="RightColumn" type="VBoxContainer" parent="MainContent/MainVBox/TopSection"]
layout_mode = 2

[node name="GradesCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/RightColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="MainVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9490196, 0.7019608, 0.3529412, 1)
text = "Оценки"
horizontal_alignment = 1

[node name="ContentHBox" type="HBoxContainer" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox"]
layout_mode = 2

[node name="SSLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox/ContentHBox"]
layout_mode = 2
text = "SS: 0"

[node name="SLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox/ContentHBox"]
layout_mode = 2
text = "S: 0"

[node name="ALabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox/ContentHBox"]
layout_mode = 2
text = "A: 0"

[node name="BLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/GradesCard/MainVBox/ContentHBox"]
layout_mode = 2
text = "B: 0"

[node name="PercussionCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/RightColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5411765, 0.39607844, 1)
text = "Перкуссия"
horizontal_alignment = 1

[node name="DrumLevelsCompletedLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.8235294, 0.9019608, 1)
text = "Уровней на перкуссии: 0"

[node name="DrumOverallAccuracyLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
text = "Точность (перкуссия): 0"

[node name="TotalDrumScoreLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
text = "Очки на перкуссии: 0"

[node name="TotalDrumHitsLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.38039216, 0.78039217, 0.7411765, 1)
text = "Попаданий на перкуссии: 0"

[node name="TotalDrumMissesLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.4509804, 0.4509804, 1)
text = "Промахов на перкуссии: 0"

[node name="MaxDrumHitStreakLabel" type="Label" parent="MainContent/MainVBox/TopSection/RightColumn/PercussionCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9490196, 0.7019608, 0.3529412, 1)
text = "Макс. серия (перкуссия): 0"

[node name="FavoriteTrackColumn" type="VBoxContainer" parent="MainContent/MainVBox/TopSection"]
layout_mode = 2

[node name="FavoriteTrackCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard"]
layout_mode = 2

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8235294, 0.41960785, 0.5686275, 1)
text = "Любимый трек"
horizontal_alignment = 1

[node name="FavoriteCoverTextureRect" type="TextureRect" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard/ContentVBox"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
expand_mode = 1

[node name="FavoriteTitleLabel" type="Label" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard/ContentVBox"]
layout_mode = 2
text = "Название песни"

[node name="FavoriteArtistLabel" type="Label" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard/ContentVBox"]
layout_mode = 2
text = "Название артиста"

[node name="FavoriteGenreLabel" type="Label" parent="MainContent/MainVBox/TopSection/FavoriteTrackColumn/FavoriteTrackCard/ContentVBox"]
layout_mode = 2
text = "Любимый жанр: Н/Д"

[node name="AchievementsColumn" type="VBoxContainer" parent="MainContent/MainVBox/TopSection"]
layout_mode = 2

[node name="RecentAchievementsCard" type="PanelContainer" parent="MainContent/MainVBox/TopSection/AchievementsColumn"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ContentVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/AchievementsColumn/RecentAchievementsCard"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="CardTitle" type="Label" parent="MainContent/MainVBox/TopSection/AchievementsColumn/RecentAchievementsCard/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.8235294, 0.9019608, 1)
text = "Последние достижения"
horizontal_alignment = 1

[node name="AchievementsListVBox" type="VBoxContainer" parent="MainContent/MainVBox/TopSection/AchievementsColumn/RecentAchievementsCard/ContentVBox"]
layout_mode = 2

[node name="EmptyLabel" type="Label" parent="MainContent/MainVBox/TopSection/AchievementsColumn/RecentAchievementsCard/ContentVBox"]
visible = false
layout_mode = 2
text = "Нет недавно открытых достижений"

[node name="ChartCard" type="PanelContainer" parent="MainContent/MainVBox"]
layout_mode = 2
theme = ExtResource("2_or3b4")

[node name="ChartContainer" type="VBoxContainer" parent="MainContent/MainVBox/ChartCard"]
layout_mode = 2

[node name="ChartTitleLabel" type="Label" parent="MainContent/MainVBox/ChartCard/ChartContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.8235294, 0.9019608, 1)
text = "Точность за последние 20 сессий"
horizontal_alignment = 1

[node name="ChartBackground" type="ColorRect" parent="MainContent/MainVBox/ChartCard/ChartContainer"]
custom_minimum_size = Vector2(1920, 300)
layout_mode = 2
color = Color(0, 0, 0, 0.7058824)

[node name="AccuracyChartLine" type="Line2D" parent="MainContent/MainVBox/ChartCard/ChartContainer/ChartBackground"]
width = 4.0
default_color = Color(1, 1, 1, 0.5019608)
round_precision = 32
antialiased = true

[node name="AccuracyChartPoints" type="Control" parent="MainContent/MainVBox/ChartCard/ChartContainer/ChartBackground"]
anchors_preset = 0

[node name="ChartXAxisLabel" type="Label" parent="MainContent/MainVBox/ChartCard/ChartContainer"]
layout_mode = 2
text = "Сессии (1 → 20)"
